[gd_scene load_steps=7 format=3 uid="uid://4gjb1b7nhkh2"]

[ext_resource type="Script" uid="uid://74deaasrqcn8" path="res://scripts/settings/wps_dir_setting_entry.gd" id="1_wliso"]
[ext_resource type="Texture2D" uid="uid://buvtdh0slsxgf" path="res://graphics/app_icons/mag_glass.svg" id="2_wliso"]
[ext_resource type="Texture2D" uid="uid://bkfxww80g54y3" path="res://graphics/app_icons/file_explorer_icon.svg" id="3_ac7bs"]
[ext_resource type="PackedScene" uid="uid://bbq8oa244tjsq" path="res://scenes/custom_components/ResetSettingBtn.tscn" id="4_2ukj3"]
[ext_resource type="Script" uid="uid://dj8lrvji31giw" path="res://scripts/settings/prvw_processing_setting_entry.gd" id="5_wliso"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_if5qn"]
color = Color(1, 1, 1, 1)

[node name="DirsSectionVBC" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 146.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="DirHeaderLB" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "STTS_DIR_HEADER_LB"

[node name="HeaderBodyHS" type="HSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_if5qn")

[node name="WpsDirHBC" type="HBoxContainer" parent="." node_paths=PackedStringArray("editable_node")]
layout_mode = 2
tooltip_text = "WPS_DIR_TTP"
script = ExtResource("1_wliso")
stts_section = "dirs"
stts_name = "wps_dir"
editable_node = NodePath("WpsDirLE")

[node name="WpsDirLB" type="Label" parent="WpsDirHBC"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "STTS_WPS_DIR_LB"
autowrap_mode = 3

[node name="WpsDirLE" type="LineEdit" parent="WpsDirHBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchWpsDirBTN" type="Button" parent="WpsDirHBC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
icon = ExtResource("2_wliso")
icon_alignment = 1

[node name="OpenInFEWpsDirBTN" type="Button" parent="WpsDirHBC"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
icon = ExtResource("3_ac7bs")
icon_alignment = 1

[node name="ResetSettingBTN" parent="WpsDirHBC" instance=ExtResource("4_2ukj3")]
visible = false
layout_mode = 2

[node name="EnablePrvwProcessingHBC" type="HBoxContainer" parent="." node_paths=PackedStringArray("editable_node")]
layout_mode = 2
tooltip_text = "ENABLE_PRVW_PROCESSING_TTP"
script = ExtResource("5_wliso")
stts_section = "dirs"
stts_name = "enable_prvw_processing"
editable_node = NodePath("EnablePrvwProcessingCB")

[node name="EnablePrvwProcessingCB" type="CheckBox" parent="EnablePrvwProcessingHBC"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "STTS_PROCESS_PRVW_CB"

[node name="ResetSettingBTN" parent="EnablePrvwProcessingHBC" instance=ExtResource("4_2ukj3")]
visible = false
layout_mode = 2

[node name="SearchDirFD" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
